Changelog
=========

2.0b18 (unreleased)
-------------------

- Nothing changed yet.


2.0b17 (2013-07-01)
-------------------

* Adjusted javascript initialization to work with the new component selection functionality
  introduced in raptus.article.core 2.0b13

2.0b16 (2012-09-12)
-------------------

* added new option to enable centering by markers

2.0b15 (2012-04-19)
-------------------

* fixed broken 2.0b14 release

2.0b14 (2012-04-19)
-------------------

* fixed raptus.article.maps.js.py to work if no marker is available
* fixed jsregistry (ordering)

2.0b13 (2011-12-06)
-------------------

* adjusted javascript registry to match the one from raptus.googlemaps 1.0b7

2.0b12 (2011-05-09)
-------------------

* fixed javascript registry expressions and helper view to prevent Unauthorized exception

2.0b11 (2011-05-06)
-------------------
* update jquery gomap to version 1.3.0 (raptus.googlemaps product)
* add http/https support
* pin google maps version to 3.3 (this fixed issues with the newest nightly version)

2.0b10 (2011-04-05)
-------------------

* fix the order for all javascript files

2.0b9 (2011-03-07)
------------------

* Added condition for all javascript files to prevent errors if api and plugin is missing

2.0b8 (2011-03-07)
------------------

* Added condition for google api js

2.0b7 (2011-02-17)
------------------

* plone 3 compatibility

2.0b6 (2011-02-17)
------------------

* Change jQuery Plugin. New Plugin is goMap
* http://www.pittss.lv/jquery/gomap/
* Remove Google Maps API Key
* Use Google Map v3
* bugfix by saving a marker
* Load google maps api over portal_javascripts (remove viewlet)

2.0b5 (2010-12-14)
------------------

* Load javascript only if a map are available.

2.0b4 (2010-11-10)
------------------

* Added French translations
* Fixed vocabulary of the zoom field (Added IntDisplayList)

2.0b3 (2010-10-21)
------------------

* Updated readme and manual

2.0b2 (2010-10-20)
------------------

* First public release